# simple_video_encoder

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: cairo.rs  image.rs
src/: frame.rs  lib.rs  output.rs
