[package]
name = "simple_video_encoder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple video encoding library built on top of ffmpeg"
repository = "https://github.com/Ununoctium117/simple_video_encoder"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.16.3", optional = true }
image = { version ="0.24.5", optional = true }

ffmpeg-sys-next = "5.1.1"


[features]
default = ["cairo-input", "image-input"]
cairo-input = ["cairo-rs"]
image-input = ["image"]
